--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -3,13 +3,13 @@ name: CI
 on: [push]
 
 jobs:
-  build:
-
+  jekyll_build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: GHA Jekyll Build
-        uses: gha-utilities/jekyll-build@v0.0.2
+      - name: 🛎 Check out master
+        uses: actions/checkout@master
         with:
-          # Relative path that source files for Jekyll to build exsist
-          destination: dist
+          fetch-depth: 1
+      - name: 🧪 Build and deploy
+        uses: victoriadrake/jekyll-cd@master
