--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -21,5 +21,5 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.S3_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_KEY }}
-          SOURCE_DIR: 'doc'      # optional: defaults to entire repository
+          SOURCE_DIR: 'docs'      # optional: defaults to entire repository
           AWS_S3_ENDPOINT: ${{ secrets.ENDPOINT }}
