--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "deploy": "./coscli cp ./out cos://cosformula-blog-1251724012/ -r",
+    "lint": "next lint",
+    "surge": "yarn export && yarn deploy"
   },
   "dependencies": {
     "@emotion/css": "^11.7.1",
     "@emotion/server": "^11.4.0",
+    "@imgix/js-core": "^3.4.0",
     "@notionhq/client": "^0.4.12",
     "next": "11.1.2",
     "notion-client": "^4.14.1",
@@ -33,8 +37,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.27.0",
-    "prettier": "^2.5.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
     "standardx": "^7.0.0",
     "typescript": "4.4.3"
   }
