--- a/package.json
+++ b/package.json
@@ -23,33 +23,33 @@
     "surge": "yarn export && yarn deploy"
   },
   "dependencies": {
-    "axios": ">=0.24.0",
+    "axios": "^1.6.2",
     "feed": "^4.2.2",
-    "gitalk": "^1.7.2",
-    "next": "^12.0.5",
-    "notion-client": "^4.10.0",
-    "notion-utils": "^4.10.0",
-    "preact": "^10.5.15",
+    "gitalk": "^1.8.0",
+    "next": "^12.3.4",
+    "notion-client": "^6.16.0",
+    "notion-utils": "^6.16.0",
+    "preact": "^10.19.2",
     "react": "^17.0.2",
-    "react-cusdis": "^2.0.1",
+    "react-cusdis": "^2.1.3",
     "react-dom": "^17.0.2",
-    "react-notion-x": "^4.11.0",
-    "use-ackee": "^3.0.0"
+    "react-notion-x": "^4.19.8",
+    "use-ackee": "^3.0.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
-    "autoprefixer": "^10.4.0",
-    "eslint": "<8.0.0",
-    "eslint-config-next": "^12.0.3",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.25.2",
+    "@types/react": "^17.0.71",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.3.4",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-react": "^7.26.1",
-    "next-sitemap": "^1.6.203",
-    "postcss": "^8.3.11",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.33.2",
+    "next-sitemap": "^1.9.12",
+    "postcss": "^8.4.32",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.5"
   },
   "resolutions": {
     "axios": ">=0.21.1"
