--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.js"
+    "next.config.cjs"
   ],
   "exclude": [
     "node_modules"
