--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remark-obsidian": "^1.8.0",
+    "remark-toc": "^9.0.0",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3"
