feat: 升级 Dockerfile 至 Node.js 20 并改用 npm，新增设计与工程文档，并优化 .dockerignore 规则

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,11 @@
-# Ignore Astro files
-*.astro
-
 # Ignore node_modules directory
 node_modules/
 
 # Ignore build output
 dist/
+
+# Ignore generated types
+.astro/
+
+# Ignore generated search index (copied from dist/)
+public/pagefind/
